--- a/index.html
+++ b/index.html
@@ -1,40 +1,28 @@
 <html>
     <head>
-        <script src="main.js"></script>
-        <link rel="stylesheet" href="style.css">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-    <script src="https://unpkg.com/ml5@0.4.3/dist/ml5.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/webcamjs/1.0.26/webcam.js"></script>
+        <script src="https://unpkg.com/ml5@latest/dist/ml5.min.js" type="text/javascript"></script>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+<script src="cool.js"></script>
+<link rel="stylesheet" href="main.css">
     </head>
     <body>
         <center>
-        <p id="header">Face Recognition!</p>
-        
-        <p style="font-size: 22px">This model is trained to tdentify these objects:</p>
-        <br>
+        <div id="intro">
+            <h2>Sound Controlled Animals!</h2>
+            <p>Try to make sounds like meowing, barking, growling or even hissing!</p>
+            </div>
+        <div id="main">
+            <button onclick="startClassification()" id="start" class="btn btn-success">Start</button>
+            <br>
+            <p id="N.O.T.">Detected Dog- Detected Cat-</p>
+            <p id="N.O.A.">Detected Voice is of-</p>
 
-        <b class="name_of_objects">
-          Mother
-          <hr>
-          Father
-        </b>
-        <br>
-        <br>
-
-        <label>Webcam View-</label>
-        <div id="camera"></div>
-        <br> <br>
-        <div id="result"></div>
-        <br><br>
-
-
-        <button id="snapper" onclick="take_snap()">Capture Image</button>
-        <button id="checker" onclick="check()">Identify Image</button>
-
-        <p style="font-size:22px">Object: <span id="result_obj_name"></span></p>
-        <p style="font-size:22px">Accuracy: <span id="result_obj_accuracy"></span></p>
+            <img id="I.O.S." src="kisspng-computer-icons-hearing-clip-art-ear-healthcare-hear-hearing-icon-5ab0580db4a774.24161896152150631774.jpg" height="500" width="500">
+        </div>
         </center>
+        <div class="copy_right_footer"><p>Made by Abdulkareem Oyekunle</p></div>
     </body>
 </html>
